# rust-project

./: AGENT.md  AGENTS.md  Cargo.toml  LICENSE  README.md  SPEC.md  skills.md
claude/: CLAUDE.md  handoff.md
codex/: AGENTS.md  handoff.md
docs/: decisions-cost.md  decisions.md  dev-metrics.md
src/: config.rs  main.rs
src/analysis/: complexity.rs  mod.rs  security.rs  style.rs
src/pr/: diff.rs  mod.rs  types.rs
src/report/: mod.rs  types.rs
tests/fixtures/: clean_diff.patch  sample_diff.patch  sample_pr_metadata.json
